--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 NODE_ENV=development
-MONGO_URI=mongodb+srv://ajit123:ajit123@reactnative.ky2pd.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGO_URI=Mongo_URI
 JWT_SECRET=userNewsApp
-api_host=https://news-app-native.herokuapp.com
+api_host=HOST_PATH
 OTP_KEY=RESET_KEY
