Chages made in env file

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 NODE_ENV=development
-MONGO_URI=Mongo_URI
+MONGO_URI=mongodb+srv://ajit123:ajit123@cluster0.n0ybu.mongodb.net/newsDatabase?retryWrites=true&w=majority
 JWT_SECRET=userNewsApp
 api_host=HOST_PATH
 OTP_KEY=RESET_KEY
