--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ PORT=3000
 NODE_ENV=development
 MONGO_URI=mongodb+srv://ajit123:ajit123@cluster0.n0ybu.mongodb.net/newsDatabase?retryWrites=true&w=majority
 JWT_SECRET=userNewsApp
-api_host=https://react-news-app-api-yt.herokuapp.com
+api_host=https://react-news-api-yt.herokuapp.com
 OTP_KEY=RESET_KEY
